# read-env

./: .gitignore  LICENSE  README.md  pyproject.toml
src/read_env_keys/: __init__.py  read_env_keys.py
