[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "read_env_keys"
version = "0.0.3"
authors = [
  { name="MidpriceDog"},
]
description = "A small package to easily read API keys from env files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MidpriceDog/read-env"
"Bug Tracker" = "https://github.com/MidpriceDog/read-env/issues"